[package]
name = "bitcoin-warp"
version = "0.1.0"
authors = ["Preston Evans <pbevans1@crimson.ua.edu>", "Seth Townsend <jstownsend1@crimson.ua.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
daemon = { path = "daemon" }
config = { path = "config" }
networking = { path = "networking" }
shared = { path = "shared" }
warp-crypto = { path = "crypto" }
serde_derive = { path = "serde_derive" }
hex = "0.4.2"
tokio = { version = "0.2.22", features = ["full"] }

[[bin]]
name = "main"
path = "daemon/src/bin/main.rs"

[workspace]
members = [
    "networking",
]
