[package]
name = "daemon"
version = "0.1.0"
authors = ["Preston Evans <pbevans1@crimson.ua.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
config = { path = "../config" }
networking = { path = "../networking" }
serde_derive = { path = "../serde_derive" }
shared = { path = "../shared" }
hex = "0.4.2"
tokio = { version = "1.0.0", features = ["full"] }
tracing-subscriber = "0.2.15"
tracing = "0.1.22" 
