[package]
name = "networking"
version = "0.1.0"
authors = ["Preston Evans <pbevans1@crimson.ua.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
config = { path = "../config" }
shared = { path = "../shared" }
warp-crypto = { path = "../crypto" }
serde_derive = { path = "../serde_derive" }
byteorder = "1"
futures = "0.3.5"
log = "0.4.11"
tokio = { version = "0.3.4", features = ["full"] }
tokio-util = { version = "0.6.0", features = ["codec"] } 
bytes = "1.0.0" 
