[package]
name = "networking"
version = "0.1.0"
authors = ["Preston Evans <pbevans1@crimson.ua.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
config = { path = "../config" }
shared = { path = "../shared" }
warp-crypto = { path = "../crypto" }
serde_derive = { path = "../serde_derive" }
byteorder = "1"
futures = "0.3.5"
tokio = { version = "1.0.0", features = ["full"] }
tokio-util = { version = "0.6.0", features = ["codec"] } 
bytes = "1.0.0" 
tracing = "0.1.22" 
tower = { version = "0.4", features = ["discover", "load", "ready-cache"] }
