[package]
name = "shared"
version = "0.1.0"
authors = ["Preston Evans <pbevans1@crimson.ua.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1"
warp-crypto = { path = "../crypto" }
hex = "0.4.2"
paste = "1.0"
serde_derive = { path = "../serde_derive" }
